# haskellian

./: .gitignore  .pylintrc  404.html  Justfile  README.md  build.sh  dev.ipynb  frontend.sh  index.html  init.sh  mkdocs.yml  objects.inv  publish.sh  pyproject.toml  pyrightconfig.json  requirements.txt
asyn-iter/: index.html
dicts/: index.html
docs/: asyn-iter.md  dicts.md  either.md  getting-started.md  index.md  iter.md  promise.md
docs/reference/: asyn-iter.md  either.md  iter.md
either/: index.html
getting-started/: index.html
haskellian/: README.md  pyproject.toml
haskellian/src/haskellian/: __init__.py  __init__.pyi  config.py
haskellian/src/haskellian/asyn_iter/: __init__.pyi  funcs.py  iter.py  lifting.py  managed.py  prefetching.py
haskellian/src/haskellian/classes/: __init__.pyi  applicative.py  functor.py  monad.py
haskellian/src/haskellian/dicts/: __init__.pyi  basics.py  dict.py  grouping.py  lifting.py  misc.py  ops.py  structure.py
haskellian/src/haskellian/either/: __init__.pyi  do_notation.py  either.py  funcs.py  narrowing.py  pydantic.py
haskellian/src/haskellian/funcs/: __init__.pyi  _flow.py  _pipe.py  curried.py
haskellian/src/haskellian/iter/: __init__.pyi  basics.py  batching.py  curried.py  indexing.py  iter.py  lifting.py  maps.py  misc.py  nested.py  searching.py  slicing.py  transposing.py  zipping.py
haskellian/src/haskellian/kwargs/: __init__.py  __init__.pyi  inspection.py  kwargs.py
haskellian/src/haskellian/option/: __init__.pyi  do_notation.py
haskellian/src/haskellian/pipe/: pipe.py
haskellian/src/haskellian/promise/: __init__.pyi  funcs.py  lifting.py  managed.py  promise.py
haskellian/src/haskellian/thunk/: __init__.py  thunk.py
haskellian/src/haskellian/trees/: __init__.pyi  trees.py
iter/: index.html
promise/: index.html
reference/asyn-iter/: index.html
reference/either/: index.html
reference/iter/: index.html
src/fp/: fp.py
src/fp/asynch/: __init__.py  iterables.py
src/haskellian/: __init__.py  iterables.py
(+18 files in other folders)
