[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "<NAME>"
version = "0.1.0"
authors = [
    {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "<DESCRIPTION>"
dependencies = [
    
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
