[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haskellian"
version = "0.1.18"
authors = [
    {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Tools for Functional Programming: function composition, generators and monadic async"
dependencies = [
    "ramda"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}
